# edr-pydantic

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml
src/: collections.py  data_queries.py  extent.py  generic_models.py  link.py  my_base_model.py  parameter.py  reference_system.py
src/edr-pydantic/: unit.py
src/edr_pydantic/: base_model.py  capabilities.py  collections.py  data_queries.py  edr_feature_collection.py  extent.py  instances.py  link.py  my_base_model.py  observed_property.py  parameter.py  reference_system.py  unit.py  variables.py
tests/: test_edr.py  test_extent.py
tests/test_data/: doc-example-collections.json  doc-example-extent.json  edr-geojson-feature-collection.json  knmi-example-collection.json  knmi-example-collections.json  label-or-symbol-unit.json  landing-page.json  parameter-group-without-label-or-observedproperty.json  parameter-invalid-data-type.json  parameter-names.json  parameter-with-categories.json  parameter-with-data-type.json  parameter-with-extent.json  simple-instance.json  temporal-interval-length3.json  temporal-interval.json
